--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "MD5": "~1.2.0",
+    "body-parser": "^1.6.2",
     "express": "~3.4.2",
-    "mongoose": "~3.8.3",
-    "handlebars-runtime": "~1.0.12",
     "express3-handlebars": "~0.5.0",
-    "MD5": "~1.2.0"
+    "handlebars-runtime": "~1.0.12",
+    "mongoose": "~3.8.3"
   },
   "devDependencies": {
     "bower": "~1.2.8",
