--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
         "sinon-chai": "~2.5.0",
         "grunt-simple-mocha": "~0.4.0",
         "proxyquire": "~0.5.2",
-        "body-parser": "*"
+        "body-parser": "*",
+        "request": "*",
+        "feedparser": "*"
     }
 }
