--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     },
     "devDependencies": {
         "bower": "~1.3",
-        "grunt": "~0.4.1",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-jshint": "~0.7.2",
-        "grunt-contrib-uglify": "~0.2.7",
-        "grunt-contrib-sass": "*",
-        "grunt-contrib-compass": "*",
-        "grunt-bower-task": "~0.3.4",
-        "grunt-nodemon": "~0.1.2",
+        "grunt": "~0.4",
+        "grunt-contrib-concat": "~0.5",
+        "grunt-contrib-jshint": "~0.10",
+        "grunt-contrib-uglify": "~0.5",
+        "grunt-contrib-sass": "~0.8",
+        "grunt-contrib-compass": "~0.9",
+        "grunt-bower-task": "~0.4",
+        "grunt-nodemon": "~0.3",
         "karma-script-launcher": "~0.1.0",
         "karma-chrome-launcher": "~0.1.1",
         "karma-html2js-preprocessor": "~0.1.0",
@@ -41,13 +41,13 @@
         "karma-coffee-preprocessor": "~0.1.1",
         "karma-phantomjs-launcher": "~0.1.1",
         "karma": "~0.10.8",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "browserify": "2.36.1",
-        "grunt-browserify": "~1.3.0",
+        "grunt-contrib-copy": "~0.5",
+        "grunt-contrib-clean": "~0.6",
+        "browserify": "~5.10",
+        "grunt-browserify": "~2.1",
         "load-grunt-tasks": "~0.2.0",
         "time-grunt": "~0.2.3",
-        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-watch": "~0.6",
         "grunt-concurrent": "~0.4.2",
         "grunt-karma": "~0.6.2",
         "grunt-contrib-less": "~0.8.3",
