--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-    "name": "myapp",
-    "description": "Boilerplate web app using node, express, mongodb, backbone, marionette.  Tooling includes Grunt, Bower, Browserify, etc.",
-    "version": "0.0.1",
-    "author": "Jason Krol",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/jkat98/benm.git"
-    },
-    "engines": {
-        "node": "0.10.x"
-    },
-    "scripts": {
-        "start": "node server/server.js",
-        "test": "grunt test"
-    },
-    "dependencies": {
-        "MD5": "~1.2.0",
-        "body-parser": "^1.6.2",
-        "express": "~3.4.2",
-        "express3-handlebars": "~0.5.0",
-        "handlebars-runtime": "~1.0.12",
-        "mongoose": "~3.8.3"
-    },
-    "devDependencies": {
-        "bower": "~1.3",
-        "grunt": "~0.4",
-        "grunt-contrib-concat": "~0.5",
-        "grunt-contrib-jshint": "~0.10",
-        "grunt-contrib-uglify": "~0.5",
-        "grunt-contrib-sass": "~0.8",
-        "grunt-contrib-compass": "~0.9",
-        "grunt-bower-task": "~0.4",
-        "grunt-nodemon": "~0.3",
-        "grunt-contrib-copy": "~0.5",
-        "grunt-contrib-clean": "~0.6",
-        "browserify": "~2",
-        "grunt-browserify": "~1",
-        "load-grunt-tasks": "~0.2.0",
-        "time-grunt": "~0.2.3",
-        "grunt-contrib-watch": "~0.6",
-        "grunt-concurrent": "~0.4.2",
-        "grunt-contrib-less": "~0.8.3",
-        "grunt-contrib-handlebars": "~0.6.0",
-        "grunt-contrib-cssmin": "~0.7.0",
-        "hbsfy": "~1.0.0",
-        "grunt-shell-spawn": "~0.3.0",
-        "proxyquire": "~0.5.2",
-        "body-parser": "*",
-        "request": "*",
-        "feedparser": "*",
-        "natural": "*",
-        "sanitize-html": "*"
-    }
+  "name": "myapp",
+  "description": "Boilerplate web app using node, express, mongodb, backbone, marionette.  Tooling includes Grunt, Bower, Browserify, etc.",
+  "version": "0.0.1",
+  "author": "Jason Krol",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jkat98/benm.git"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "scripts": {
+    "start": "node server/server.js",
+    "test": "grunt test"
+  },
+  "dependencies": {
+    "MD5": "~1.2.0",
+    "body-parser": "^1.6.2",
+    "cheerio": "^0.18.0",
+    "express": "~3.4.2",
+    "express3-handlebars": "~0.5.0",
+    "handlebars-runtime": "~1.0.12",
+    "jquery": "^2.1.3",
+    "mongoose": "~3.8.3"
+  },
+  "devDependencies": {
+    "bower": "~1.3",
+    "grunt": "~0.4",
+    "grunt-contrib-concat": "~0.5",
+    "grunt-contrib-jshint": "~0.10",
+    "grunt-contrib-uglify": "~0.5",
+    "grunt-contrib-sass": "~0.8",
+    "grunt-contrib-compass": "~0.9",
+    "grunt-bower-task": "~0.4",
+    "grunt-nodemon": "~0.3",
+    "grunt-contrib-copy": "~0.5",
+    "grunt-contrib-clean": "~0.6",
+    "browserify": "~2",
+    "grunt-browserify": "~1",
+    "load-grunt-tasks": "~0.2.0",
+    "time-grunt": "~0.2.3",
+    "grunt-contrib-watch": "~0.6",
+    "grunt-concurrent": "~0.4.2",
+    "grunt-contrib-less": "~0.8.3",
+    "grunt-contrib-handlebars": "~0.6.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "hbsfy": "~1.0.0",
+    "grunt-shell-spawn": "~0.3.0",
+    "proxyquire": "~0.5.2",
+    "body-parser": "*",
+    "request": "*",
+    "feedparser": "*",
+    "natural": "*",
+    "sanitize-html": "*"
+  }
 }
