--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express3-handlebars": "~0.5.0",
     "handlebars-runtime": "~1.0.12",
     "jquery": "^2.1.3",
-    "mongoose": "~3.8.3"
+    "mongoose": "~3.8.3",
+    "promise": "^6.1.0"
   },
   "devDependencies": {
     "bower": "~1.3",
