--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "backbone.marionette": "~2.1",
+    "backbone.marionette": "~2.4",
     "jquery": "~1.10.2",
-    "underscore": "~1.5.2",
+    "underscore": "~1.8",
     "backbone": "~1.1"
-  },
-  "devDependencies": {
-    "jasmine": "~1.3.1"
   },
   "exportsOverride": {
     "jquery": {
@@ -19,11 +16,12 @@
       "js": "underscore.js"
     },
     "backbone": {
-      "js": "backbone.js"
+      "js": "backbone.js",
+      "deps": ["underscore", "jquery"]
     },
     "backbone.marionette": {
-      "js": "lib/backbone.marionette.js"
-    },
-    "jasmine": {}
+      "js": "lib/backbone.marionette.js",
+      "deps": ["backbone"]
+    }
   }
 }
