--- a/package.json
+++ b/package.json
@@ -21,41 +21,40 @@
     "cookie-parser": "^1.3.4",
     "express": "~4.12",
     "express-error-handler": "^1.0.1",
-    "express-handlebars": "2.0.0",
+    "express-handlebars": "2.0.1",
     "express-session": "^1.11.1",
-    "handlebars": "3",
+    "handlebars": "~3.0",
     "handlebars-runtime": "~1.0.12",
     "jquery": "^2.1.3",
     "method-override": "^2.3.2",
     "mongoose": "~4.0",
-    "promise": "~7.0"
-  },
-  "devDependencies": {
-    "bower": "~1.3",
-    "grunt": "~0.4",
-    "grunt-contrib-concat": "~0.5",
-    "grunt-contrib-jshint": "~0.10",
-    "grunt-contrib-sass": "~0.8",
-    "grunt-contrib-compass": "~0.9",
-    "grunt-bower-task": "~0.4",
-    "grunt-nodemon": "~0.3",
-    "grunt-contrib-copy": "~0.5",
-    "grunt-contrib-clean": "~0.6",
+    "promise": "~7.0",
+    "backbone": "^1.2.0",
+    "backbone.marionette": "^2.4.1",
     "browserify": "~9",
+    "feedparser": "*",
+    "grunt": "~0.4",
     "grunt-browserify": "~3.7",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.3",
-    "grunt-contrib-watch": "~0.6",
     "grunt-concurrent": "~0.4.2",
-    "grunt-contrib-less": "~0.8.3",
-    "grunt-contrib-handlebars": "~0.10",
+    "grunt-contrib-clean": "~0.6",
+    "grunt-contrib-compass": "~0.9",
+    "grunt-contrib-concat": "~0.5",
+    "grunt-contrib-copy": "~0.5",
     "grunt-contrib-cssmin": "~0.7.0",
-    "hbsfy": "~2.2",
+    "grunt-contrib-handlebars": "~0.10",
+    "grunt-contrib-jshint": "~0.10",
+    "grunt-contrib-less": "~0.8.3",
+    "grunt-contrib-sass": "~0.8",
+    "grunt-contrib-watch": "~0.6",
+    "grunt-nodemon": "~0.3",
     "grunt-shell-spawn": "~0.3.0",
+    "hbsfy": "~2.2",
+    "jquery": "^2.1.4",
+    "load-grunt-tasks": "~0.2.0",
+    "natural": "*",
     "proxyquire": "~0.5.2",
     "request": "*",
-    "feedparser": "*",
-    "natural": "*",
-    "sanitize-html": "*"
+    "sanitize-html": "*",
+    "time-grunt": "~0.2.3"
   }
 }
