--- a/package.json
+++ b/package.json
@@ -16,22 +16,18 @@
   },
   "dependencies": {
     "MD5": "~1.2.0",
+    "backbone": "^1.2.0",
+    "backbone.marionette": "^2.4.1",
     "body-parser": "~1.12",
+    "browserify": "~9",
     "cheerio": "~0.19",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.4",
+    "es6-promise": "^2.3.0",
     "express": "~4.12",
     "express-error-handler": "^1.0.1",
     "express-handlebars": "2.0.1",
     "express-session": "^1.11.1",
-    "handlebars": "~3.0",
-    "handlebars-runtime": "~1.0.12",
-    "jquery": "^2.1.3",
-    "method-override": "^2.3.2",
-    "mongoose": "~4.0",
-    "promise": "~7.0",
-    "backbone": "^1.2.0",
-    "backbone.marionette": "^2.4.1",
-    "browserify": "~9",
     "feedparser": "*",
     "grunt": "~0.4",
     "grunt-browserify": "~3.7",
@@ -48,10 +44,19 @@
     "grunt-contrib-watch": "~0.6",
     "grunt-nodemon": "~0.3",
     "grunt-shell-spawn": "~0.3.0",
+    "handlebars": "~3.0",
+    "handlebars-runtime": "~1.0.12",
     "hbsfy": "~2.2",
     "jquery": "^2.1.4",
     "load-grunt-tasks": "~0.2.0",
+    "method-override": "^2.3.2",
+    "modui-popup": "0.0.9",
+    "mongoose": "~4.0",
     "natural": "*",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-twitter": "^1.0.3",
+    "promise": "~7.0",
     "proxyquire": "~0.5.2",
     "request": "*",
     "sanitize-html": "*",
