--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "MD5": "~1.2.0",
     "backbone": "^1.2.0",
     "backbone.marionette": "^2.4.1",
     "body-parser": "~1.12",
@@ -60,6 +59,7 @@
     "proxyquire": "~0.5.2",
     "request": "*",
     "sanitize-html": "*",
-    "time-grunt": "~0.2.3"
+    "time-grunt": "~0.2.3",
+    "yandex-translate": "^2.1.0"
   }
 }
