--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "yandex-translate": "^2.1.0"
   },
   "devDependencies": {
+    "grunt-livereload": "^0.1.3",
     "grunt-serve": "^0.1.6"
   }
 }
