--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "natural": "*",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
     "promise": "~7.0",
     "proxyquire": "~0.5.2",
