--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "~0.19",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.4",
+    "email": "^0.2.6",
     "es6-promise": "^2.3.0",
     "express": "~4.12",
     "express-error-handler": "^1.0.1",
