--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "modui-popup": "0.0.9",
     "mongoose": "~4.0",
     "natural": "*",
+    "nodemailer": "^2.3.2",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
