--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jquery": "^2.1.4",
     "load-grunt-tasks": "~0.2.0",
     "mail": "^0.2.3",
+    "malihu-custom-scrollbar-plugin": "^3.1.3",
     "method-override": "^2.3.2",
     "modui-popup": "0.0.9",
     "mongoose": "~4.0",
