--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "passport-vkontakte": "^0.4.0",
     "promise": "~7.0",
     "proxyquire": "~0.5.2",
     "request": "*",
