--- a/package.json
+++ b/package.json
@@ -45,9 +45,14 @@
     "grunt-nodemon": "~0.3",
     "grunt-shell-spawn": "~0.3.0",
     "handlebars": "~3.0",
-    "handlebars-helper-i18n": "^0.1.0",
     "handlebars-runtime": "~1.0.12",
     "hbsfy": "~2.2",
+    "i18next": "^3.3.1",
+    "i18next-express-middleware": "^1.0.1",
+    "i18next-node-fs-backend": "^0.1.2",
+    "i18next-scanner": "^1.4.1",
+    "i18next-text": "^0.5.6",
+    "i18next-xhr-backend": "^0.6.0",
     "jquery": "^2.1.4",
     "load-grunt-tasks": "~0.2.0",
     "mail": "^0.2.3",
