--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "handlebars-runtime": "~1.0.12",
     "hbsfy": "~2.2",
     "i18next": "^3.3.1",
+    "i18next-browser-languagedetector": "^0.3.0",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
     "i18next-scanner": "^1.4.1",
